k8s/app-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-api
spec:
  selector:
    matchLabels:
      app: todo-app-api
  replicas: 3
  template:
    metadata:
      labels:
        app: todo-app-api
    spec:
      containers:
        - name: node-api
          image: hieunguyenxk/app-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-api
spec:
  selector:
    app: todo-app-api
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
