k8s/app-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-client
spec:
  selector:
    matchLabels:
      app: todo-app-client
  replicas: 3
  template:
    metadata:
      labels:
        app: todo-app-client
    spec:
      containers:
        - name: react-app
          image: hieunguyenxk/app-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-client
spec:
  selector:
    app: todo-app-client
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  #     nodePort: 31000
  # type: NodePort
