k8s/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      # terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo
        # command:
        #   - mongod
        #   - "--replSet"
        #   - rs0      
        #   - "--bind_ip"
        #   - "0.0.0.0"
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
      # - name: mongo-sidecar
      #   image: cvallance/mongo-k8s-sidecar
      #   env:
      #     - name: MONGO_SIDECAR_POD_LABELS
      #       value: "role=mongo,environment=test"
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
        # annotations:
        #   volume.beta.kubernetes.io/storage-class: "fast"
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
