k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  # namespace: ingress-nginx
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - hieunguyen.today
  #   secretName: ingress-cert
  rules:
  - host: www.risko.fun
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-app-client
              port:
                number: 3000
  # - host: api.hieunguyen.today
  #   http:
  #     paths:
  #       - path: /
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: todo-app-api
  #             port:
  #               number: 5000
